--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
@@ -11,6 +11,14 @@
   background-repeat: no-repeat;
   opacity: 0.07; 
 }
+.btn{
+  display:block;
+  margin-left:auto;
+  padding:8px;
+  margin-right:40px;
+  margin-bottom:10px;
+
+}
 
 ::ng-deep ng-select .ng-value, 
 ::ng-deep ng-select .ng-placeholder, 
