Validations for brief reason field

--- a/LeaveAppUI/src/app/form-submitted/form-submitted.component.html
+++ b/LeaveAppUI/src/app/form-submitted/form-submitted.component.html
@@ -1,10 +1,11 @@
 <div class="container mt-5 text-center">
   <div class="alert shadow-lg p-4 rounded">
-    <h2 class="alert-heading">Success!</h2>
-    <p class="mb-3">Your form has been submitted successfully.</p>
+    <h2 class="alert-heading">Success!<br> You have notifed your leave</h2>
+    <img src="assets/images/success.png" alt="Success Illustration" class="my-3" style="max-width: 150px; height: auto;" />
+    <p class="mb-3">Your leave request has been submitted successfully.</p>
    
     <p class="mb-0">You may now return to the home page or close this tab.</p>
 
-    <a routerLink="/" class="btn btn-primary mt-4">Back to Homepage</a>
+    <a routerLink="/" class="btn btn-dark mt-4">Back to Homepage</a>
   </div>
 </div>
