--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
@@ -3,7 +3,7 @@
   <button type="button" class="btn-close" (click)="closeAlert()" aria-label="Close"></button>
 </div>
 <div class="page-wrapper my-5">
-  <button type="button" class="btn btn-secondary" [routerLink]="['/pending']">Leave Requests</button>
+  <button type="button" class="btn btn-secondary" style="z-index: 9999; position: relative;" (click)="goToPending()">Leave Requests</button>
   <div class="card shadow-lg p-4">
     <div class="card-header text-center">
       <h5 style="background-color:black; color: white;">Notify Leave</h5>
