--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 80%;
   background-image: url('/assets/images/bg.png');
   background-size: cover;
   background-position: center;
@@ -17,7 +17,7 @@
   padding:8px;
   margin-right:40px;
   margin-bottom:10px;
-
+  margin-top:10px;
 }
 
 ::ng-deep ng-select .ng-value, 
