--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
@@ -3,10 +3,16 @@
   <button type="button" class="btn-close" (click)="closeAlert()" aria-label="Close"></button>
 </div>
 <div class="page-wrapper my-5">
-  <button type="button" class="btn btn-secondary" style="z-index: 9999; position: relative;" (click)="goToPending()">Leave Requests</button>
-  <div class="card shadow-lg p-4">
-    <div class="card-header text-center">
-      <h5 style="background-color:black; color: white;">Notify Leave</h5>
+  <div class="card shadow-lg p-0">
+    <div class="card-header d-flex align-items-center justify-content-between bg-dark text-white px-4 py-3" style="position: relative;">
+      <h5 class="m-0 mx-auto">Notify Leave</h5>
+      <button
+        type="button"
+        class="btn btn-secondary position-absolute end-0 me-4"
+        style="z-index: 9999;"
+        (click)="goToPending()">
+        Leave Requests
+      </button>
     </div>
     <div class="card-body">
       <form [formGroup]="leaveForm" (ngSubmit)="onSubmit()">
