--- a/LeaveAppUI/src/app/pages/pending/pending.component.css
+++ b/LeaveAppUI/src/app/pages/pending/pending.component.css
@@ -28,8 +28,9 @@ body {
 
 .sidebar {
   width: 220px;
-  color: white;
-  padding: 15px 0;
+  
+  padding: 20px 0;
+  
 }
 
 .sidebar ul {
@@ -39,16 +40,23 @@ body {
 }
 
 .sidebar li {
-  padding: 15px 25px;
+  padding: 14px 24px;
+  margin: 10px 12px;
   cursor: pointer;
   font-size: 16px;
-  transition: background 0.3s;
+  border-radius: 8px;
+  color: #333;
+  transition: all 0.3s ease;
 }
 
-.sidebar li:hover,
+.sidebar li:hover {
+  background-color: #d4b6ff;
+}
+
 .sidebar li.active {
   background-color: #A100FF;
-  border-radius: 8px solid black;
+  color: white;
+  font-weight: bold;
 }
 
 .content {
@@ -67,6 +75,7 @@ body {
   flex-wrap: wrap;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
+  cursor: pointer;
 }
 
 .leave-card:hover {
@@ -97,6 +106,7 @@ body {
   padding: 8px 12px;
   font-size: 18px;
   cursor: pointer;
+  height: 40px;
   align-self: center;
 }
 
@@ -118,6 +128,7 @@ body {
   max-height: 90vh;
   overflow-y: auto;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+  position: relative;
 }
 
 .details-content h2 {
@@ -127,23 +138,9 @@ body {
   font-weight: 600;
 }
 
-.detail-name,
-.detail-type,
-.detail-reason,
-.detail-contact,
-.detail-notify,
-.detail-location,
-.detail-status,
-.detail-comment {
+.details-content p {
   margin: 10px 0;
   font-size: 16px;
-}
-
-.detail-date,
-.detail-branch {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
 }
 
 .action-buttons {
@@ -167,7 +164,6 @@ body {
   background-color: #8a00e6;
 }
 
-
 .reject-modal {
   position: fixed;
   inset: 0;
@@ -185,6 +181,11 @@ body {
   width: 90%;
   max-width: 500px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.reject-content h3 {
+  margin-top: 0;
+  color: #A100FF;
 }
 
 .reject-content textarea {
@@ -227,13 +228,21 @@ body {
   border-radius: 6px;
   cursor: pointer;
 }
+
 .close-btn {
+  position: absolute;
+  top: 15px;
+  right: 20px;
   font-size: 28px;
   cursor: pointer;
   font-weight: bold;
+  color: #444;
+  background: transparent;
+  border: none;
 }
 
 .close-btn:hover {
   color: #A100FF;
 }
+
 
