--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
@@ -4,12 +4,12 @@
 </div>
 <div class="page-wrapper my-5">
   <div class="card shadow-lg p-0">
-    <div class="card-header d-flex align-items-center justify-content-between bg-dark text-white px-4 py-3" style="position: relative;">
-      <h5 class="m-0 mx-auto">Notify Leave</h5>
+    <div class="card-header d-flex align-items-center justify-content-between text-white px-4 py-3" style="position: relative; background-color: #A100FF;">
+      <h5 class="m-0 mx-auto fw-bold" style="color: white">Notify Leave</h5>
       <button
         type="button"
         class="btn btn-secondary position-absolute end-0 me-4"
-        style="z-index: 9999;"
+        style="z-index: 9999; background-color: black;"
         (click)="goToPending()">
         Leave Requests
       </button>
