--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
@@ -15,7 +15,7 @@
   display:block;
   margin-left:auto;
   padding:8px;
-  margin-right:40px;
+  background-color: #A100FF;
   margin-bottom:10px;
   margin-top:10px;
 }
